[DEL] example test case table
