# backend/internal/domains/codingInterview.go
@@ -15,16 +15,8 @@ type CodingQuestion struct {
 	CreatedBy   string                   `gorm:"type:text"`
 	UpdatedAt   time.Time                `gorm:"autoUpdateTime"`
 	UpdatedBy   string                   `gorm:"type:text"`
-	Examples    []CodingQuestionExample  `gorm:"foreignKey:CodingQuestionID;references:Id"`
 	TestCases   []CodingQuestionTestCase `gorm:"foreignKey:CodingQuestionID;references:Id"`
 	Tags        []string                 `gorm:"type:text"`
-}
-
-type CodingQuestionExample struct {
-	gorm.Model
-	CodingQuestionID uint   `gorm:"index"`
-	Input            string `gorm:"type:text"`
-	Output           string `gorm:"type:text"`
 }
 
 type CodingQuestionTestCase struct {
@@ -33,6 +25,7 @@ type CodingQuestionTestCase struct {
 	Input            string `gorm:"type:text"`
 	Output           string `gorm:"type:text"`
 	IsHidden         bool   `gorm:"default:false"`
+	IsExample        bool   `gorm:"default:false"`
 }
 
 type CodingQuestionResponse struct {
@@ -47,7 +40,6 @@ type CodingQuestionResponse struct {
 type CreateCodingQuestionRequest struct {
 	Title       string                   `json:"title"`
 	Description string                   `json:"description"`
-	Examples    []CodingQuestionExample  `json:"examples"`
 	TestCases   []CodingQuestionTestCase `json:"test_cases"`
 	Tags        []string                 `json:"tags"`
 	Difficulty  string                   `json:"difficulty"`
